* fix TAMS initialization